Removing case list for add audio duplicate check
- adding test and renaming some others